Add ability to connect to the node
For convenience, a new Maven profile pgjdbc-ng can be specified when
building, and will declare the latest version of the pgjdbc-ng driver
as a dependency. It is not really needed for the build, but declaring
it a dependency will conveniently get it downloaded into the local
Maven repository, where it can be added to jshell's class path and
used to do some testing.

Serving suggestion:

jshell \
--class-path=pljava-packaging/target/pljava-pg....jar \
--execution=local \
-J--add-modules=java.sql,java.sql.rowset \
-J--class-path=pljava-packaging/target/pljava-pg....jar:\
$HOME/.m2/repository/com/impossibl/pgjdbc-ng/pgjdbc-ng-all/.../pgjdbc-ng-all-....jar \
-J-Dcom.impossibl.shadow.io.netty.noUnsafe=true \
-J-Dpgconfig=path/to/pgversion/bin/pg_config

The -J--add-modules is needed because even though jshell treats java.sql
and java.sql.rowset as available by default, the local JVM it is running on
wouldn't know that without being told.

The class path given to the JVM also needs to mention the pgjdbc-ng-all
jar if it will be used to make connections to a node. Don't waste time
with the original pgjdbc, it completely throws away notices/warnings
so isn't very usable for testing purposes. (As for pgjdbc-ng, it will
collect whatever warnings, notices, infos it receives and chain them all
together as SQLWarnings. To tell them apart, use getSQLState(); it should
be 00000 for non-warnings. Which of those it does or doesn't receive,
of course, is controlled by client_min_messages.)

The path given to jshell itself does not need that jar, because
pgjdbc-ng can be just a provider of the java.sql.Driver service
and doesn't have to be visible.

The noUnsafe setting silences a complaint from the netty library
about Java (correctly!) denying it access to private internals.

A number of convenience methods are added to use an existing JDBC
connection and: change PostgreSQL config settings, CREATE EXTENSION
pljava, install and remove jars, set the j